syntax = "proto3";

package user;

option go_package = "user-service/proto;proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  uint32 id = 1;
}

message UserResponse {
  uint32 id = 1;
  string name = 2;
  string email = 3;
}
